--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,7 +21,6 @@ h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
   letter-spacing: 1px;
 }
 p {
@@ -74,9 +73,8 @@ a:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: white;
+  color: #777;
   font-size: 16px;
-  font-weight: bold;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -102,25 +100,34 @@ a:focus {
 .navbar-custom .nav li.active a:hover {
   color: white;
 }
+.img2 img{
+  height: 65px;
+  width: 65px;
+}
 @media (min-width: 768px){
   .navbar-custom {
   /*  padding: 20px 0;*/
-      border-bottom: 15px solid #633328;
-    letter-spacing: 1px;
-    background-color: #7dca10;
-    box-shadow: -2px 3px 8px #000;
+
+     letter-spacing: 1px;
+     background-color: white;
+     box-shadow: -2px 3px 8px #000;
+     height: 85px;
     -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
     -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
     transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   }
+  .navbar-custom .nav li a {
+    line-height: 50px;
+  }
   .navbar-custom.top-nav-collapse {
     padding: 0;
-    background: #7dca10;
-    border-bottom: 15px solid #633328;
+    background: white;
+    border-bottom: 5px solid #365a03;
     box-shadow: -2px 3px 8px #000;
+    height: 85px;
   }
   .intro{
-      background: url(../img/SOLT1.jpg) bottom right   ;
+      background: url(../img/solgs.jpg) bottom right   ;
       color: white;
   }
 .intro fa-mobile{
@@ -134,7 +141,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/SOLT1.jpg);
+  background: url(../img/solgs.jpg);
   background-color: black;
   text-shadow: 5px 5px 8px #000;
   -webkit-background-size: cover;
@@ -152,6 +159,7 @@ a:focus {
   font-family: 'Droid Sans', sans-serif;
 
 
+
 }
 h4{
   color:white;
@@ -166,8 +174,13 @@ h4{
   margin-top: 50px;
   border-bottom: 1px solid white;
 }
-#about h1{
-  color: black;
+#about h1 {
+  color: #365a03;
+  font-style: italic;
+}
+#about h3 {
+  color: #365a03;
+  font-style: italic;
 }
 .intro .fa{
   color: white;
@@ -187,7 +200,7 @@ h4{
 }
 .intro button{
   margin-top: 50px;
-background-color: #7dca10;
+background-color: #627b9f;
 border: 2px solid #fffcfc;
 color: white;
 padding: 10px;
@@ -198,8 +211,9 @@ border-radius: 30px;
 }
 @media (min-width: 768px) {
   .intro {
-    height: 100%;
-    padding: 0;
+    height: auto;
+    padding-bottom: 138px;
+    padding-top: 150px;
   }
   .intro .intro-body .brand-heading {
     font-size: 100px;
@@ -207,6 +221,7 @@ border-radius: 30px;
   .intro .intro-body .intro-text {
     font-size: 26px;
   }
+
 }
 
 /*about section*/
@@ -327,7 +342,7 @@ button{
   }
 }
 .content-section {
-  padding-top: 100px;
+  padding-top: 35px;
 }
 #download{
   width: 100%;
@@ -429,13 +444,14 @@ button{
 }
 footer {
   padding: 50px 0;
-    background: #7dca10;
-      border-bottom: 15px solid #633328;
-      box-shadow: -2px 3px 8px #000;
+background: white;
+border-bottom: 15px solid #365a03;
+box-shadow: -2px 3px 8px #000;
 
 }
 footer p {
   margin: 0;
+  color: black;
 }
 ::-moz-selection {
   text-shadow: none;
